service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nagios-deployment
  labels:
    run: nagios-deployment
spec:
  selector:
    run: nagios-deployment
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
status:
  loadBalancer:
    ingress:
      - ip: 10.4.50.62
